new animation file

--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
     <style>
         body{
             margin:0;
-            background-color: #2f3536
+            background-color: #232524
         }
         canvas {
             width: 100%;
